[package]
name = "oxideav-jpegxl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust JPEG XL (JXL) codec — scaffold (decoder + encoder not yet implemented)"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
