[package]
name = "oxideav-mp4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust MP4 / ISO base media file container for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }

[dev-dependencies]
oxideav-basic = { workspace = true }
oxideav-flac = { workspace = true }
