[package]
name = "oxideav-opus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Opus audio codec for oxideav (header parsing + decoder stub)"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
