[package]
name = "oxideav-png"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust PNG + APNG decoder and encoder for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-pixfmt = { workspace = true }
miniz_oxide = "0.7"
