[package]
name = "oxideav-speex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust Speex (CELP speech codec) — header parser + bit reader + scaffold"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }

[dev-dependencies]
oxideav-ogg = { workspace = true }
oxideav-container = { workspace = true }
