[package]
name = "oxideav-subtitle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Subtitle codecs + containers for oxideav — SRT, WebVTT, and ASS/SSA"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }

[dev-dependencies]
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-core = { workspace = true }
