[package]
name = "oxideav-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-codec roundtrip comparison tests against ffmpeg"
publish = false

[dependencies]
oxideav = { workspace = true }
oxideav-core = { workspace = true }
oxideav-flac = { workspace = true }
oxideav-vorbis = { workspace = true }
oxideav-mp3 = { workspace = true }
oxideav-aac = { workspace = true }
oxideav-gsm = { workspace = true }
oxideav-mp1 = { workspace = true }
oxideav-mp2 = { workspace = true }
oxideav-speex = { workspace = true }
oxideav-opus = { workspace = true }
oxideav-ogg = { workspace = true }
oxideav-mp4 = { workspace = true }
oxideav-ffv1 = { workspace = true }
oxideav-mkv = { workspace = true }
# Used by the relocated oxideav-pipeline integration tests
# (pipeline_wav_roundtrip / pipeline_parity / pipeline_pix_convert).
# Pipeline-as-a-framework lives in `oxideav` already; we just need
# the standalone deps the moved tests reference directly.
oxideav-pipeline = { workspace = true }
oxideav-source = { workspace = true }
oxideav-basic = { workspace = true }
oxideav-audio-filter = { workspace = true }
oxideav-image-filter = { workspace = true }
