[package]
name = "oxideav-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-codec roundtrip comparison tests against ffmpeg"
publish = false

[dependencies]
oxideav = { workspace = true }
oxideav-core = { workspace = true }
# Aggregator that exposes register_all(&mut RuntimeContext) — the
# replacement for the historical oxideav::with_all_features() helper
# that was removed in the linkme sweep (task #526).
oxideav-meta = { workspace = true }
oxideav-flac = { workspace = true }
oxideav-vorbis = { workspace = true }
oxideav-mp3 = { workspace = true }
oxideav-aac = { workspace = true }
oxideav-gsm = { workspace = true }
oxideav-mp1 = { workspace = true }
oxideav-mp2 = { workspace = true }
oxideav-speex = { workspace = true }
oxideav-opus = { workspace = true }
oxideav-ogg = { workspace = true }
oxideav-mp4 = { workspace = true }
oxideav-ffv1 = { workspace = true }
oxideav-mkv = { workspace = true }
# Used by the relocated oxideav-pipeline integration tests
# (pipeline_wav_roundtrip / pipeline_parity / pipeline_pix_convert).
# Pipeline-as-a-framework lives in `oxideav` already; we just need
# the standalone deps the moved tests reference directly.
oxideav-pipeline = { workspace = true }
oxideav-source = { workspace = true }
oxideav-basic = { workspace = true }
oxideav-audio-filter = { workspace = true }
oxideav-image-filter = { workspace = true }

# 3D scenes & assets — cross-format roundtrip suite + `Mesh3DRegistry`
# lookup tests, relocated here from `oxideav-mesh3d`'s dev-deps. Keeps
# the typed-model crate from importing its own consumers (the registry
# pattern from `oxideav-meta::populate_mesh3d_registry` already lives
# in production code; tests follow the same architecture).
oxideav-mesh3d = { workspace = true }
oxideav-stl = { workspace = true }
oxideav-obj = { workspace = true }
oxideav-gltf = { workspace = true }
oxideav-usdz = { workspace = true }
# oxideav-fbx: decoder-only (binary FBX → Scene3D). Required for the
# Blender + assimp black-box oracle that exports .fbx via Blender (the
# gold-standard producer since Autodesk's FBX SDK is non-redistributable).
oxideav-fbx = { workspace = true }
serde_json = "1"
