[package]
name = "oxideav-vp9"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust VP9 video header parser + decoder scaffold for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }

[dev-dependencies]
oxideav-mp4 = { workspace = true }
