[package]
name = "oxideav-webp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust WebP image decoder for oxideav (RIFF VP8 lossy + VP8L lossless + VP8X extended + ALPH + animation)"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-vp8 = { workspace = true }
